fixed filters h3,h4 non-alignment issue

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -38,7 +38,7 @@
 }
 .filters > div h3 {
 	font-weight: 600;
-	padding-left: 2em;
+	padding-left: 2.5em;
 }
 .filters > div h4 {
 	font-weight: 400;
